Fixed navbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 .headeritems {
-  padding: 7px;
+  padding-top: 13px;
 }
 
 .navlinks {
